13.9.2011 git
- Back to the oneliner INSERT statement to update synchronization information

10.9.2011 git
- dropping column description from TBSYNCHRONIZE and TBUSAGEHISTORY
ALTER TABLE `tbsynchronize` DROP `description`;
ALTER TABLE `tbusagehistory` DROP `description`;

9.9.2011 git
- Started fixing "Undefined Index" error
- Removed schemaname filed from TBSYNCHRONIZE and TBUSAGEHISTORY
ALTER TABLE `tbsynchronize` DROP `schemaname`;
ALTER TABLE `tbusagehistory` DROP `schemaname`;


5.9.2011 git
- Added movie links to manual and to FAQ
- Referencing FAQ on Undefined index problem in manual

4.9.2011 git
- Added FAQ answer to "Undefined price index" problem when installing deltasql server
- Added external libraries used by Deltasql in README.txt

1.9.2011
A new video tutorial revealing in 11 minutes the secret of installing the deltasql server has been published :-)
As usual, the tutorial does not ship with this package.


*******************************
1.4.0 Release Notes (23.8.2011)

New client: Multipurpose deltaclient for Windows XP, Vista, 7 with dynamic project/branches selection and
 automatic copy to clipboard of generated script.

People upgrading from 1.3.7 should follow the procedure described on the Deltasql main page, as deltasql
 detects changing in the underlying datamodel.
*******************************

23.8.2011 git
- documenting deltaclient install steps and particularities on manual.php
- adding ip column to tbusagehistory to troubleshoot client issues
Users need to run the following script on their schemas:
ALTER TABLE `tbusagehistory` ADD `ip` VARCHAR( 32 ) NULL ;

14.8.2011-22.8.2011 git
- the deltasql client written in freepascal is finished and ready for release with 1.4.0

13.8.2011 git
- adding GUI skeleton for deltasql client in freepascal
- adding libraries which the new freepascal deltasql client will use

9.8.2011 git
adding branch visibility to interface for deltasql clients

8.8.2011 git