@@ -7,7 +7,7 @@ $dbredactor_version="1.0.2";
 $antclient_version="1.0.3";
 $bashclient_version="1.2.1";
 $gadget_version="1.0.7";
-$deltaclient_version="1.4.0";
+$deltaclient_version="1.4.1";
 
 // number of scripts on a page
 $scriptsperpage=15;
